Fix: StackOverflow error in project & Study #81